quic/s2n-quic-transport/src/ack/snapshots/s2n_quic_transport__ack__ack_manager__tests__AckManager.snap
---
source: quic/s2n-quic-transport/src/ack/ack_manager.rs
expression: "size_of::<AckManager>()"
---
176
