quic/s2n-quic-transport/src/ack/snapshots/s2n_quic_transport__ack__ack_manager__tests__AckManager32.snap
---
source: quic/s2n-quic-transport/src/ack/ack_manager.rs
assertion_line: 636
expression: "size_of::<AckManager>()"
---
128
